# TailorFit

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTIONS.md  CONTRIBUTION_PLAN.md  MERGED_PRS.md  PROTECTION.md  README.md  REFLECTION.md  SPECIFICATION.md  VOTING_RESULTS.md  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: apischemas.py  routes.py  schemas.py
assignment5/: README.md  Test_and_Use_Case_Document.md
assignment6/: Agile_Planning_Document.md
assignment7/: kanban_explanation.md  reflection.md  template_analysis.md
assignment8/: README.md  assignment8_models.md  assignment8_reflection.md
assignment9/: assignment9_models.md  assignment9_reflection.md
creational_patterns/: abstract_factory.py  builder.py  factory_method.py  prototype.py  simple_factory.py  singleton.py
docs/: 1.ContextDiagram.md  2.ContainerDiagram.md  3.ComponentDiagram.md  4.CodeDiagram.md  ADR.md  ARCHITECTURE.md
factories/: repository_factory.py
repositories/: job_description_repository.py  resume_repository.py
repositories/inmemory/: in_memory_job_description_repository.py  in_memory_resume_repository.py
services/: cover_letter_service.py  job_description_service.py  resume_service.py
src/: models.py
tests/: test_api.py  test_coverage_report.txt  test_creational_patterns.py  test_failure.py  test_services.py  tests_failure.py
update/: REFLECTION.md  SRD.md
